[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nyse"
version = "0.1.0"
description = "US market data sources (candles, calendar, news, metrics)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["sources*"]

[tool.setuptools]
py-modules = ["domain"]
