[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nyse"
version = "0.1.0"
description = "US market data sources (candles, calendar, news, metrics)"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "requests>=2.28",
    "pytz",
    "finvizfinance>=0.14",
]

[tool.setuptools.packages.find]
include = ["sources*", "pipeline*"]

[tool.setuptools]
py-modules = ["domain", "config_loader"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: сеть и/или config.env",
]
