[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nyse"
version = "0.1.0"
description = "US market data sources (candles, calendar, news, metrics)"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "requests>=2.28",
    "pytz",
    "finvizfinance>=0.14",
    "pydantic>=2.0",
    "langchain-core>=0.2",
    "langchain-openai>=0.2",
    # [socks] — если в config.env задан TELEGRAM_PROXY=socks5://... (иначе ImportError socksio)
    "python-telegram-bot[socks]>=21,<23",
]

[tool.setuptools.packages.find]
include = ["sources*", "pipeline*"]

[tool.setuptools]
py-modules = ["domain", "config_loader"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "PySocks>=1.7.1",
]
# pip install -e ".[sentiment]" — для локального FinBERT/transformers (этап B)
sentiment = [
    "transformers>=4.36",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "integration: сеть и/или config.env",
]
